Actualización tienda y carrito
Se termina la página del carrito y se actualiza la tienda

--- a/html/carrito.html
+++ b/html/carrito.html
@@ -96,23 +96,43 @@
         <h1><strong>Mi Carrito</strong></h1>
         <div class="row">
             <div id="Productos" class="container-fluid col-lg-9">
-                <h1><strong>Productos</strong></h1>
+                <div class="row">
+                    <h1><strong>Productos</strong></h1>
+                    <div class="row">
+                        <div class="container-fluid col-lg-4">
+                            <div class="card shadow-sm h-100">
+                                <a href="#"><img src="../img/COOKING_CAT/cat_pollo.png" class="card-img-top" alt="item1"></a>
+                            </div>
+                        </div>
+                        <div class="container-fluid col-lg-8" style="text-align: justify;">
+                            <p style="color: aliceblue; font-size: 20px;">
+                                Cooking Kitten Salmon Recipe Fórmula de salmón para gatitos, que proporciona a su mascota 
+                                una combinación única de alimento energético rico en proteínas. Preparado con más de 30% de 
+                                pescado, carne de pollo fresca, legumbres, hortalizas, este menú de sabor intenso y sabroso 
+                                conquistará el paladar del felino más exigente.
+                            </p>
+                            <button class="btn-add" style="background-color: rgb(32, 143, 218); color: aliceblue; height: 40px; width: 40px;">+</button>
+                            <input id="contador" type="number" style="height: 40px; width: 80px;">
+                            <button class="btn-add" style="background-color: rgb(207, 58, 58);color: aliceblue; height: 40px; width: 40px;">-</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="Resumen" class="container-fluid col-lg-3">
                 <h1><strong>Resumen de Compra</strong></h1>
                 <div style="margin-top: 30px; margin-left: 20px; color: aliceblue;">
-                    <h5>Sub Total--------------------$0</h5>
+                    <h5>Sub Total----------------------$0</h5>
                 </div>
                 <div style="margin-top: 30px; margin-left: 20px; color: aliceblue; border-bottom: aliceblue solid;">
-                    <h5>Envío------------------------$0</h3>
+                    <h5>Envío--------------------------$0</h3>
                 </div>
-                <div style="margin-top: 30px; margin-left: 20px; margin-bottom: 50px; color: aliceblue;">
+                <div style="margin-top: 30px; margin-left: 20px; color: aliceblue;">
                     <h3><strong>Compra---------------$0</strong></h4>
                 </div>
                 <div class="container-fluid col-lg-12" style="align-items: center; justify-content: center; text-align: center;">
-                    <a  href="" class="button" style="color: aliceblue; text-decoration: none;"><img src="../img/LOGOS/Logo_wp.png" alt="Modo Pago Online WP" 
-                        Style="height: 150px; width: 320px; border-radius: 5%;">WebPay</a>
-                    <a  href="" class="button" style="color: aliceblue; text-decoration: none;"><img src="../img/LOGOS/LOGO-TRANSPARENTE.png" alt="Modo Pago Online WP" 
+                    <a  href="" class="button" style="color: aliceblue; text-decoration: none; font-size: 30px;"><img src="../img/LOGOS/Logo_wp.png" alt="Modo Pago Online WP" 
+                        Style="height: 150px; width: 320px; border-radius: 5%; margin-top: 30px;">WebPay</a>
+                    <a  href="" class="button" style="color: aliceblue; text-decoration: none; font-size: 30px;"><img src="../img/LOGOS/LOGO-TRANSPARENTE.png" alt="Modo Pago Online WP" 
                         Style="height: 150px; width: 320px; border-radius: 5%; background-color: aliceblue; margin-top: 30px;"> Transferencia </a>
                 </div>
             </div>
