--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
                    <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="../html/tienda.html">Todos</a></li>
-                    <li><a class="dropdown-item" href="#">Gatos</a></li>
+                    <li><a class="dropdown-item" href="../html/tiendagatos.html">Gatos</a></li>
                     <li><a class="dropdown-item" href="../html/tienda.html">Perros</a></li>
                     <li><a class="dropdown-item" href="#">Farmacia</a></li>
                   </ul>
