--- a/html/tiendagatos.html
+++ b/html/tiendagatos.html
@@ -24,7 +24,7 @@
                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="../html/tienda.html">Todos</a></li>
-                  <li><a class="dropdown-item" href="../html/tiendagatos.html">Gatos</a></li>
+                  <li><a class="dropdown-item" href="#">Gatos</a></li>
                   <li><a class="dropdown-item" href="../html/tienda.html">Perros</a></li>
                   <li><a class="dropdown-item" href="#">Farmacia</a></li>
                 </ul>
@@ -93,7 +93,7 @@
     </nav>
     <div id="Tienda" class="container-fluid col-lg-11">
       <div class="row" style="align-items: center; justify-content: center;"> 
-        <h1 id="h1tomas">GENERAL</h1>
+        <h1 id="h1tomas">GATOS</h1>
         <div class="card divcard1" >
           <a href="#tabla-datos">
             <img src="../img/COOKING_CAT/cat_pollo.png" class="card-img-top" alt="...">
@@ -113,6 +113,13 @@
           </div>
         </div>
         <!-- Contenedores de productos -->
+        <div class="card divcard1" >
+          <a href="../html/fit_formula_adulto.html"><img src="../img/FITFORMULA/MODIFICADAS/1.2.png" id="imgmenu1" alt="..."></a>
+          <div class="card-body">
+            <button type="button" id="buttonTOMAS1">Precio</button>
+            <button type="button" id="buttonTOMAS2">Agregar</button>
+          </div>
+        </div>
   
         <div class="card divcard1" >
           <img src="../img/GATOS/GATO1.png" class="card-img-top" alt="...">
@@ -296,12 +303,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body> 
 </html>
-
-
-
-
-
-
-
-
-
