--- a/html/tienda.html
+++ b/html/tienda.html
@@ -94,6 +94,9 @@
     <div id="Tienda" class="container-fluid col-lg-11">
       <div class="row" style="align-items: center; justify-content: center;"> 
         <h1 id="h1tomas">GENERAL</h1>
+
+
+        <!-- GATO 1X-->
         <div class="card divcard1" >
           <a href="#tabla-datos">
             <img src="../img/COOKING_CAT/cat_pollo.png" class="card-img-top" alt="...">
@@ -103,6 +106,9 @@
               <button type="button" id="buttonTOMAS2">Agregar</button>
           </div>
         </div>
+
+
+
         <!-- EXPANSION DE IMAGEN-->
         <div id="tabla-datos">
           <img src="../img/COOKING_CAT/cat_pollo.png" style="max-width: 400px; ">
@@ -112,26 +118,18 @@
             <h4>Cooking Kitten Salmon Recipe Fórmula de salmón para gatitos, que proporciona a su mascota una combinación única de alimento energético rico en proteínas. Preparado con más de 30% de pescado, carne de pollo fresca, legumbres, hortalizas, este menú de sabor intenso y sabroso conquistará el paladar del felino más exigente. </h4>
           </div>
         </div>
+
+
+
+
+
         <!-- Contenedores de productos -->
   
+        
         <div class="card divcard1" >
-          <img src="../img/GATOS/GATO1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
-
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
-
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
+          <a href="../html/fit_formula_adulto.html">
+            <img src="../img/FITFORMULA/MODIFICADAS/1.2.png" style="max-width: 100px;" class="card-img-top" alt="...">
+          </a>
           <div class="card-body">
             <button type="button" id="buttonTOMAS1">Precio</button>
             <button type="button" id="buttonTOMAS2">Agregar</button>
