--- a/html/tiendagatos.html
+++ b/html/tiendagatos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles_cbs.css">
+    <link rel="stylesheet" href="../css/tabla-datos-gatos.css"> 
     <title>MASCOTAS CBS</title>
   </head>
   <body>
@@ -94,6 +95,9 @@
     <div id="Tienda" class="container-fluid col-lg-11">
       <div class="row" style="align-items: center; justify-content: center;"> 
         <h1 id="h1tomas">GATOS</h1>
+
+
+        <!-- GATO 1-->
         <div class="card divcard1" >
           <a href="#tabla-datos">
             <img src="../img/COOKING_CAT/cat_pollo.png" class="card-img-top" alt="...">
@@ -103,7 +107,7 @@
               <button type="button" id="buttonTOMAS2">Agregar</button>
           </div>
         </div>
-        <!-- EXPANSION DE IMAGEN-->
+        <!-- EXPANSION-->
         <div id="tabla-datos">
           <img src="../img/COOKING_CAT/cat_pollo.png" style="max-width: 400px; ">
           <div style="color: whitesmoke; text-align: justify; padding: 1cm;">
@@ -112,144 +116,186 @@
             <h4>Cooking Kitten Salmon Recipe Fórmula de salmón para gatitos, que proporciona a su mascota una combinación única de alimento energético rico en proteínas. Preparado con más de 30% de pescado, carne de pollo fresca, legumbres, hortalizas, este menú de sabor intenso y sabroso conquistará el paladar del felino más exigente. </h4>
           </div>
         </div>
-        <!-- Contenedores de productos -->
+
+
+
+        <!-- GATO 2-->
         <div class="card divcard1" >
-          <a href="../html/fit_formula_adulto.html"><img src="../img/FITFORMULA/MODIFICADAS/1.2.png" id="imgmenu1" alt="..."></a>
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
+            <a href="#tabla-datos2">
+              <img src="../img/GATOS/GATO1.png" class="card-img-top" alt="...">
+            </a>
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
         </div>
-  
-        <div class="card divcard1" >
-          <img src="../img/GATOS/GATO1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
+          <!-- EXPANSION-->
+        <div id="tabla-datos2">
+            <img src="../img/GATOS/GATO1.png" style="max-width: 400px; ">
+            <div style="color: whitesmoke; text-align: justify; padding: 1cm;">
+              <h1>Bravery Chicken Adult Cat</h1>
+              <h3 style="color: yellow;">Cantidad a agregar <button type="button" class="btn btn-danger">+1</button> </h3>
+              <h4>Chicken Adult Cat de BRAVERY® Es un alimento con pollo para gatos adultos con más de un año de edad y con un exquisito sabor a pollo. Libre de grano y cereales, además, de ser monoproteíco, con pollo siempre como primer ingrediente y enriquecido con antioxidantes hipoalergénicos 100% naturales. Cuenta con un elevado contenido de proteínas, alta digestibilidad y palatabilidad, ideal para gatos adultos, ya que cubre todas las necesidades que necesitan durante la etapa de su crecimiento. </h4>
+            </div>
         </div>
 
+
+        <!-- GATO 3-->
         <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
+            <a href="#tabla-datos3">
+              <img src="../img/GATOS/GATO3.png" class="card-img-top" alt="...">
+            </a>
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
           </div>
+          <!-- EXPANSION-->
+          <div id="tabla-datos3">
+            <img src="../img/GATOS/GATO3.png" style="max-width: 400px; ">
+            <div style="color: whitesmoke; text-align: justify; padding: 1cm;">
+              <h1>Nath Cat adulto esterilizado</h1>
+              <h3 style="color: yellow;">Cantidad a agregar <button type="button" class="btn btn-danger">+1</button> </h3>
+              <h4>Comida para gatos esterilizados en edad adulta. Se ha elaborado para satisfacer las necesidades nutricionales de estos felinos y ayudarles a que se mantengan en su peso ideal.Se trata de una receta elaborada a base de pollo y arroz. También incluye Inmune Boost, un extracto natural botánico ideal porque actúa como fuente de antioxidantes, ayudando a neutralizar los radicales libres. Esto es muy beneficioso para la mascota porque protege su sistema inmune y su salud.</h4>
+              <h4>Características y beneficios:</h4>
+              <h4>
+                <ul>
+                    <li>Con glucosamina y condroitina para el mantenimiento de las articulaciones.</li>
+                    <li>Con DL-metionina para controlar el pH urinario y prevenir la aparición de cristales.</li>
+                    <li>Con L-carnitina para estimular la conversión de grasa en energía.</li>
+                </ul>
+              </h4>
+            </div>
+          </div>
+
+          <!-- GATO 4-->
+        <div class="card divcard1" >
+            <a href="#tabla-datos4">
+              <img src="../img/GATOS/GATO4.png" class="card-img-top" alt="...">
+            </a>
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+          <!-- EXPANSION-->
+        <div id="tabla-datos4">
+            <img src="../img/GATOS/GATO4.png" style="max-width: 400px; ">
+            <div style="color: whitesmoke; text-align: justify; padding: 1cm;">
+              <h1>Fit Formula Gato Adulto </h1>
+              <h3 style="color: yellow;">Cantidad a agregar <button type="button" class="btn btn-danger">+1</button> </h3>
+              <h4>FIT FORMULA® Gato Adulto, es un alimento completo y balanceado desarrollado con ingredientes de alta digestibilidad, satisfaciendo todos los requerimientos nutricionales de su gato desde el año de vida.</h4>
+              <h4>Las características de este producto son:</h4>
+              <h4>
+                <ul>
+                    <li>Cuatro fuentes proteicas (carne, pollo, salmón y huevo), que aseguran la presencia de todos los aminoácidos esenciales para un mejor desarrollo.</li>
+                    <li>Un aporte balanceado de minerales, que reduce el riesgo de formación de cálculos renales.</li>
+                    <li>Ácidos grasos esenciales, Omega 3 y 6, que ayudan al desarrollo neuronal y al cuidado de su piel y pelaje.</li>
+                    <li>Prebióticos, Manano Oligosacáridos (MOS), que mantienen la salud intestinal, reducen la población de bacterias dañinas y ayudan a fortalecer el sistema inmune.</li>
+                    <li>Extracto de Yucca schidigera, que mejora la consistencia de las deposiciones, dejándolas más firmes, mejor conformadas y disminuyendo su olor de manera natural.</li>
+
+                </ul>
+              </h4>
+            </div>
         </div>
 
+        <!-- GATO 5-->
         <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
+            <a href="#tabla-datos5">
+              <img src="../img/GATOS/GATO5.png" class="card-img-top" alt="...">
+            </a>
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+          <!-- EXPANSION-->
+        <div id="tabla-datos5">
+            <img src="../img/GATOS/GATO5.png" style="max-width: 400px; ">
+            <div style="color: whitesmoke; text-align: justify; padding: 1cm;">
+              <h1>Royal Canin adulto Indoor </h1>
+              <h3 style="color: yellow;">Cantidad a agregar <button type="button" class="btn btn-danger">+1</button> </h3>
+              <h4>Royal Canin Indoor favorece unas heces pequeñas, firmes y considerablemente menos olorosas, mediante el uso de ingredientes que actúan sobre la capacidad de retención acuosa (zeolita y fibras insolubles) y sobre los olores fecales (FOS y zeolita).</h4>
+                <h4>Royal Canin es líder en el mercado mundial de alimento balanceado para gatos y perros. Fundada en 1967 en Francia por un médico veterinario, Royal Canin asumió el compromiso de la Nutrición Salud, con el objetivo de aportar las respuestas nutricionales más innovadoras y adaptadas a las necesidades específicas de gatos y perros.</h4>
+            </div>
         </div>
 
+
+        <!-- CONTENIDO SIN IMAGEN ADICIONAL-->
         <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
+            <img src="../img/GATOS/GATO6.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+        <div class="card divcard1" >
+            <img src="../img/GATOS/GATO7.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+        <div class="card divcard1" >
+            <img src="../img/GATOS/GATO8.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+        <div class="card divcard1" >
+            <img src="../img/GATOS/GATO9.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+        <div class="card divcard1" >
+            <img src="../img/GATOS/GATO10.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+        <div class="card divcard1" >
+            <img src="../img/GATOS/GATO11.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
+        </div>
+        <div class="card divcard1" >
+            <img src="../img/GATOS/GATO12.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
+            </div>
         </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
 
-        <div class="card divcard1" >
-          <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <button type="button" id="buttonTOMAS1">Precio</button>
-            <button type="button" id="buttonTOMAS2">Agregar</button>
-          </div>
-        </div>
-      </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
           <!-- Footer -->
           <div id="footer" class="container-fluid">
             <div class="row">
