--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
           </div>
         </nav>
       </div> 
+    <!-- Fin de la barra de navegación-->
     <div class="container-fluid"> <!-- CARRUSEL-->
       <div  id="carouselExample" class="carousel slide bg-dark" >
         <div class="carousel-indicators"> <!-- indicadores -->
@@ -70,7 +71,7 @@
 
     <!--  SLIDER DE MARCAS -->
 
-    <div class="container col-10">
+    <div class="container col-11">
 
       <h3>NUESTRAS MARCAS</h3><br><br>
 
@@ -200,27 +201,16 @@
 
     <h3>Encuentranos</h3><br><br>
 
-    <div class="col-12">
-
-      <div class="container row divubicacion">
-
-        <div class="col-6 col-sm-12 col-md-5 col-lg-6">
-            <a href="https://www.google.com/maps/place/CBS+Mascotas/@-33.3646955,-70.6703236,17z/data=!4m6!3m5!1s0x9662c7daa67963c1:0xb35093b215a9b810!8m2!3d-33.3646955!4d-70.6702378!16s%2Fg%2F11tj91bvvl">
-                <img class="container-fluid imagendiv" src="../img/UBICACION/CBS_UBICACIÓN.jpg">
-            </a>
-        </div>
-
-        <div class="col-1 col-sm-12 col-md-1 col-lg-1"> </div>
-
-        <div class="col-5 col-sm-12 col-md-5 col-lg-5 divinterno" >
-            <div>
-                <h1 class="container-fluid textdivubicacion"><br>¡¡VISÍTANOS!!<br>CBS<br>MASCOTAS</h1>
+    <div id="QuienesSomos" class="container-fluid col-md-11">
+        <div id="Contintro" class="row">
+            <div id="imagendiv" class="container-fluid col-md-5 col-sm-12">
+                <a href="https://www.google.com/maps/place/CBS+Mascotas/@-33.3646955,-70.6703236,17z/data=!4m6!3m5!1s0x9662c7daa67963c1:0xb35093b215a9b810!8m2!3d-33.3646955!4d-70.6702378!16s%2Fg%2F11tj91bvvl"><img src="../img/UBICACION/CBS_UBICACIÓN.jpg" alt="ubicacion" style="height: 500px; width: 500px; padding-right: 20px;"></a>
             </div>
-
+            <div id="divinterno" class="container-fluid col-md-5">
+                <h1><strong>!!VIS&Iacute;TANOS¡¡<br>CBS MASCOTAS</strong></h1>
+            </div>
         </div>
-
-      </div>
-    </div><BR><BR>
+    </div><br><br>
     
 
   <!-- PRODUCTOS MAS VENDIDOS-->
