--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -53,18 +53,18 @@
                       <label for="email" class="colocar_email">Email
                         <span class="obligatorio">*</span>
                       </label>
-                      <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
+                      <input type="text" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
                     </p>
                     <p>
                       <label for="telefone" class="colocar_telefono">Teléfono
                       </label>
-                      <input type="tel" name="introducir_telefono" id="telefono" placeholder="+56 9 9999 9999">
+                      <input type="tel" name="introducir_telefono" id="numero" placeholder="+56 9 9999 9999" onchange="return validarNumero()">
                     </p>     
                     <p>
                       <label for="asunto" class="colocar_asunto">Asunto
                         <span class="obligatorio">*</span>
                       </label>
-                      <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
+                      <input type="text" name="introducir_asunto" id="asunto" required="obligatorio" placeholder="Escribe un asunto">
                     </p>    
                     <p>
                       <label for="mensaje" class="colocar_mensaje">Mensaje
@@ -72,7 +72,7 @@
                       </label>                     
                       <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
                     </p>                    
-                    <button id="btn_enviar" type="submit" name="enviar_formulario"><p><strong>Enviar</strong></p></button>
+                    <button id="btn_enviar" type="button" name="enviar_formulario" onclick="return validarFormulario()"><p><strong>Enviar</strong></p></button>
                     <p class="aviso">
                       <span class="obligatorio"> * </span>los campos son obligatorios.
                     </p>          
@@ -145,5 +145,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../js/main.js"></script>
   </body> 
 </html>
