--- a/html/tienda.html
+++ b/html/tienda.html
@@ -179,13 +179,13 @@
     </div>
     <hr>
 
-    <div class="container col-10">
+    <div class="container col-11">
 
 
       <div class="container-fluid row col-12"> 
 
         <h1>Guia de Alimentación Canina</h1><br><br>
-        <h5 id="h5calculadora">Quieres saber saber cual es la ración de comida que debe consumir tu Peludo, lo podras obtener un estimado con esta sencilla calculadora.</h5><br><br>
+        <h5 id="h5calculadora">Quieres saber saber cual es la ración de comida que debe consumir tu Peludo, lo podras obtener <br>un estimado con esta sencilla calculadora.</h5><br><br>
         
         <div class="col-5">
 
