--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -57,13 +57,15 @@
                         <span class="obligatorio">*</span>
                       </label>
                       <div id="alertaErrName" style="display: none; color: red;">El nombre ingresado no es válido, ingrese nuevamente</div>
+                      <div id="campReqNom" style="display: none; color: red;">El campo es obligatorio</div>
                       <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
                     </p>              
                     <p>
                       <label for="email" class="colocar_email">Email
                         <span class="obligatorio">*</span>
                       </label>
-                      <div id="alertaErrMail" style="display: none; color: red;">El correo ingresado no es válido, ingrese nuevamente</div>                      
+                      <div id="alertaErrMail" style="display: none; color: red;">El correo ingresado no es válido, ingrese nuevamente</div>  
+                      <div id="campReqMail" style="display: none; color: red;">El campo es obligatorio</div>                    
                       <input type="text" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
                     </p>
                     <p>
@@ -76,12 +78,14 @@
                       <label for="asunto" class="colocar_asunto">Asunto
                         <span class="obligatorio">*</span>
                       </label>
+                      <div id="campReqAsunto" style="display: none; color: red;">El campo es obligatorio</div>
                       <input type="text" name="introducir_asunto" id="asunto" required="obligatorio" placeholder="Escribe un asunto">
                     </p>    
                     <p>
                       <label for="mensaje" class="colocar_mensaje">Mensaje
                         <span class="obligatorio">*</span>
-                      </label>                     
+                      </label>    
+                      <div id="campReqSMS" style="display: none; color: red;">El campo es obligatorio</div>                 
                       <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
                     </p>                    
                     <button id="btn_enviar" type="submit" name="enviar_formulario" onclick=""><p><strong>Enviar</strong></p></button>
