--- a/html/tienda.html
+++ b/html/tienda.html
@@ -98,9 +98,9 @@
 
         <!-- GATO 1X-->
         <div class="card divcard1" >
-          <a href="#tabla-datos">
+          <!--a href="#tabla-datos"-->
             <img src="../img/COOKING_CAT/cat_pollo.png" class="card-img-top" alt="...">
-          </a>
+          <!--a-->
           <div class="card-body">
               <button type="button" id="buttonTOMAS1">Precio</button>
               <button type="button" id="buttonTOMAS2">Agregar</button>
@@ -291,7 +291,9 @@
                 </div>
             </div>
         </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../js/main.js"></script>
   </body> 
 </html>
 
