--- a/html/index.html
+++ b/html/index.html
@@ -231,7 +231,7 @@
         
         <div class="container-fluid row col-xs-10 col-sm-8 col-md-6 col-lg-4 col-xl-18" style="background-color:darkslategrey; color: whitesmoke; padding: 0.5cm;">
 
-            <h3>¿QUIERES SABER QUIEN ES EL <br>PERRITO DEL DÍA?</h3> <br>
+            <h3>¿QUIERES SABER QUIEN ES <BR>EL PERRITO DEL DÍA?</h3> <br>
 
             <div class="container-fluid col-xs-12 col-sm-8 col-md-4 col-lg-4 col-xl-4">
                 <img id="dogImage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy7dEU7olYlld69YqWx8LE-vaxP1zd_54B-U3Hr3S67n-EJe5xIgYqqWE11QqZCMzTuJo&usqp=CAU" style="max-width: 300px; max-height: 250px;"><br><br>
