--- a/html/prueba.html
+++ b/html/prueba.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles_cbs.css">
-  </head>
-  <body>
-  
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
 
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
-  </body> 
+  <p style="background-color: darkgrey; color: whitesmoke;">La hora local es: <span id="hora"></span></p>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $.ajax({
+        url: "http://worldtimeapi.org/api/ip",
+        dataType: "json",
+        success: function(data) {
+          var fechaHora = new Date(data.datetime);
+          var hora = fechaHora.getHours();
+          var minutos = fechaHora.getMinutes();
+          var segundos = fechaHora.getSeconds();
+          var horaSegundo = hora + ":" + minutos + ":" + segundos;
+          var horaMinuto = hora + ":" + minutos;
+          $("#hora").text(horaMinuto);
+        }
+      });
+    });
+  </script>
+</body>
 </html>
