--- a/html/index.html
+++ b/html/index.html
@@ -245,7 +245,7 @@
     <h3>PRODUCTOS MÁS VENDIDOS</h3>
 
 
-        <div  class="container-fluid row col-sm-12 col-md-12 col-lg-12 divfondo1" Style="">
+        <div  class="container-fluid row col-sm-12 col-md-12 col-lg-12 divfondo1">
 
           
 
