--- a/html/QuiénesSomos.html
+++ b/html/QuiénesSomos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles_cbs.css">
+    <link rel="stylesheet" href="../css/calculadora1.css">
     <title>MASCOTAS CBS</title>
   </head>
   <body>
@@ -30,6 +31,8 @@
                   </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+                <!-- API HORA LOCAL-->
+                <li class="nav-item nav-link" style="color: yellow;">La hora local es: <span id="hora"></span></li>
               </ul>
             </div>
             <a href="carrito.html" class="btn"><img src="../img/ICONOS/icon_market_car-1.png" alt="carrito" id="carrito"></a>
@@ -113,5 +116,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body> 
+    <script src="../js/hora,.js"></script>
+</body> 
 </html>
