--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles_cbs.css">
     <link rel="stylesheet" href="../css/mapatienda.css">
+    <link rel="stylesheet" href="../css/calculadora1.css">
     <title>MASCOTAS CBS</title>
   </head>
   <body>
@@ -30,7 +31,9 @@
                     <li><a class="dropdown-item" href="#">Farmacia</a></li>
                   </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>                
+                <!-- API HORA LOCAL-->
+                <li class="nav-item nav-link" style="color: yellow;">La hora local es: <span id="hora"></span></li>
               </ul>
             </div>
             <a href="carrito.html" class="btn"><img src="../img/ICONOS/icon_market_car-1.png" alt="carrito" id="carrito"></a>
@@ -497,6 +500,7 @@
     
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
     <script src="../js/perritodelmes.js"></script>
+    <script src="../js/hora,.js"></script>
 
 </body>
 </html>
