--- a/html/tiendagatos.html
+++ b/html/tiendagatos.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles_cbs.css">
-    <link rel="stylesheet" href="../css/tabla-datos-gatos.css"> 
+    <link rel="stylesheet" href="../css/tabla-datos-gatos.css">
+    <link rel="stylesheet" href="../css/calculadora1.css"> 
     <title>MASCOTAS CBS</title>
   </head>
   <body>
@@ -31,6 +32,8 @@
                 </ul>
               </li>
               <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+              <!-- API HORA LOCAL-->
+              <li class="nav-item nav-link" style="color: yellow;">La hora local es: <span id="hora"></span></li>
             </ul>
           </div>
           <a href="carrito.html" class="btn"><img src="../img/ICONOS/icon_market_car-1.png" alt="carrito" id="carrito"></a>
@@ -94,7 +97,7 @@
     </nav>
     <div id="Tienda" class="container-fluid col-lg-11">
       <div class="row" style="align-items: center; justify-content: center;"> 
-        <h1 id="h1tomas">GATOS</h1>
+        <h1 id="h1tomas">GATOS / FELINOS</h1>
 
 
         <!-- GATO 1-->
@@ -347,5 +350,6 @@
             </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="../js/hora,.js"></script>
   </body> 
 </html>
